
    NEW slftp.ini parameter(s):
      x=0

    1. compare your slftp.ini with the provided one in /dist folder
    2. update your helpfiles with the provided ones in /dist/help folder
    3. verify that all your regexes are valid and don't throw errors during running
       as TRegExpr allowed invalid regexes before
    4. delete your slftp.kb file which is needed due to some internal changes
    5. enjoy!

--==============================( KNOWN BUGS )====================================-

    OpenSSL v1.1.* isn't supported yet
    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Statsoutput sometimes screwed -> NEGATIVE BYTES (due to parsing of x-dupe response)
    Dirlist confusion on linux development builds causing wrong skip files output (#265)

--=============================( SLFTP v1.5.7 )===================================-
    {+} FastMM5 memory manager with better multithreading scaling for Windows (https://github.com/pleriche/FastMM5)
    {+} SynFPCx64MM memory manager with better multithreading scaling for x86_64
        (http://blog.synopse.info/post/2020/05/07/New-Multi-thread-Friendly-Memory-Manager-for-FPC-written-in-x86_64-assembly)
    {+} Default C memory manager for other 32-bit unix targets (https://www.freepascal.org/docs-html/current/rtl/cmem/index.html)
    {#} Relogin of slots didn't bring up all slots as intended
    {#} announce_event for precatcher from spam config never worked
    {#} Backup causes access violation if stats db is disabled but a stats db file exists
    {#} Possibility for deadlock due to irc_message_lock and pending_messages_queue lock
    {#} Fix queue bloat issue with race task being recreated over and over again for a specific site
    {#} Sometimes files that should have been skipped were transfered anyway
    {#} mp3numdisks took the wrong value, e.g. VA-Serious_Beats_92-(541833CD)-4CD-FLAC-2019-WRE